# Learn_Agentic_AI

./: OCR_File_conversion_PDF_to_md.ipynb  prompting.ipynb
01_technology_background/: 01_what_is_a_gpu.ipynb
06b_crew_ai/00_uv/: 00_UV.ipynb
Assignments/: 01_api_parameters.md
Step00_Learn_simple_prompting/: 01(a)_simple_prompting_two_SDK_methods.ipynb  01(b)_prompting_with_Image_method_1.ipynb  01(c)_prompting_with_Image_method_2.ipynb  01(d)_chatSession_prompting_method_1.ipynb  01(e)_chatSession_prompting_method_2.ipynb  01(g)_controlling_LLM_output_method_2.ipynb
Step03_AgenticAI_Frameworks/Crew_AI/03_agentic_design_patterns/: 00(a)_Intro.md  00(b)_prompt_chaining_implementation_without_liteLLM.md  00(c)_prompt_chaining_implementation_with_liteLLM.md  00(d)_Router_implementation.md
Step03_AgenticAI_Frameworks/Crew_AI/04_strategies_in_workflows/: 00_Intro.md  03_deepseek_running_locally.md
Step03_AgenticAI_Frameworks/Crew_AI/05_augmented_llms_RAG/: 01(a)_memory.md  01(b)_memory_coding.md  02_tools.md
Step03_AgenticAI_Frameworks/Crew_AI/06_processes/: 00_processes.md
Step03_AgenticAI_Frameworks/Crew_AI/06_processes/projects/project1/: pyproject.toml
Step03_AgenticAI_Frameworks/Crew_AI/11_monitoring/monitoring_crew/: README.md  pyproject.toml  report.md
Step03_AgenticAI_Frameworks/Crew_AI/11_monitoring/monitoring_crew/src/monitoring_crew/: crew.py  main.py
Step03_AgenticAI_Frameworks/OpenAI_Agents_SDK/: 01(a)_Agents_architechure.md  01_intro_OpenAI_Agents_SDK.md  03_adding_openAI_Agents_SDK_in_your_project.md  03_hello_agent_code.md  04_chainlit_UI.md  06_Enable_streaming_in_code.md
Step03_AgenticAI_Frameworks/OpenAI_Agents_SDK/_projects/ZaikaSekho/: pyproject.toml
Step03_AgenticAI_Frameworks/OpenAI_Agents_SDK/_projects/ZaikaSekho/src/zaikasekho/: __init__.py  chatbot.py
Step03_AgenticAI_Frameworks/OpenAI_Agents_SDK/_projects/chainlit_UI/: pyproject.toml
Step03_AgenticAI_Frameworks/OpenAI_Agents_SDK/_projects/chainlit_UI/src/chainlit_ui/: __init__.py
Step03_AgenticAI_Frameworks/OpenAI_Agents_SDK/_projects/hello_agent/: pyproject.toml
Step03_AgenticAI_Frameworks/OpenAI_Agents_SDK/_projects/hello_agent/src/hello_agent/: chatbot.py  main.py
Step03_AgenticAI_Frameworks/OpenAI_Agents_SDK/_projects/project3/: pyproject.toml
Step03_AgenticAI_Frameworks/OpenAI_Agents_SDK/_projects/project3/src/project3/: __init__.py  chatbot.py
step00_hello_world/: 00_intro.ipynb  01(b)_prompting_with_Image_method#2.ipynb  01(f)_controlling_LLM_output_method_1.ipynb  01_prompting.ipynb  01_prompting_(1).ipynb  01_simple_prompting_two_SDK_methods.ipynb  02_open_ai_prompting_&_aisuite_wrapper.ipynb  03_Gemini_live_API.ipynb  prompting.ipynb
step00_simple_prompting_without_Langchain/: 00_introduction.ipynb  01(a)_simple_prompting_two_SDK_methods.ipynb  01(b)_prompting_with_Image_method_1.ipynb  01(c)_prompting_with_Image_method_2.ipynb
step01_technology_background/: 01_what_is_a_gpu.ipynb  02_CUDA_platfrom.ipynb  02_cuda_gpu.ipynb  03_compound_ai_system.ipynb  04_Agentic_AI_Stack.ipynb
step02_generative_ai_for_beginners/: 01_langchain_hello_world.ipynb  02(a)_intro_RAG.ipynb  02(b)_RAG_implementation_with_PineconeDB.ipynb  02(b)_updated_RAG_implementation_with_PineconeDB.ipynb  02(c)_Advance_RAG(responding_capability_from_Database_only).ipynb  02(c)_Advance_RAG(responding_from_Database_content_only).ipynb  02(c)_Advance_RAG_Picture&audio_recognition_ipynb.ipynb  02(c)_Advance_RAG_with_image&audio_functionality.ipynb  02(e)Function_calling.ipynb  02(e)_Function_calling.ipynb  02_intro_RAG.ipynb  03_LLM_Leaderboards.ipynb  04_GenAI_foundations.ipynb  05_openAi_canvas.ipynb  06_Function_calling.ipynb  07(a)_Fine_Tuning_of_Gemini_Model.ipynb  07(b)_Fine_Tuning_using_code.ipynb  07_Fine_Tuning_of_Gemini_Model.ipynb
step02_generative_ai_for_beginners /: 02(c)_Advance_RAG(responding_from_Database_content_only).ipynb
step02_generative_ai_for_beginners/01_projects/: 01_Langchain_gemini_hello_world.ipynb  02_RAG_project.ipynb
step06(a)_agentic_design_patterns/: 00(b)_code_prompt_chaining.md  00_Intro.md
step06(b)_crew_ai/00_uv/: 00_UV.ipynb  01_UV_Installation.ipynb  03_uv_package_init.ipynb
step06(b)_crew_ai/00_uv/_projects/project2/: pyproject.toml
step06(b)_crew_ai/01_litellm/: 00_litellm_introduction.ipynb
step06(b)_crew_ai/01_litellm/_projects/project1/: pyproject.toml
step06(b)_crew_ai/01_litellm/_projects/project1/src/project1/: hello.py
step06(b)_crew_ai/02_crewAI_intro/: 00_intro&_installation.ipynb  00_intro.ipynb  01_crew_project_hello_world.ipynb
step06_crew_ai/03_agentic_design_patterns/: 00(a)_Intro.md  00(b)_prompt_chaining_without_liteLLM.md  00(c)_prompt_chaining_with_liteLLM.md  00(d)_Router_implementation.md
step06_crew_ai/03_agentic_design_patterns/projects/prompt-chaining/: pyproject.toml
step06_crew_ai/04_strategies_in_workflows/: 01_strategies_implement_in_code.md  02_project_litellm_coding_steps.md  04_multi_agents_system.md  05_multiple_agents_with_multi_LLM_integration.md
step06_crew_ai/04_strategies_in_workflows/projects/crews_agents_tasks_coding/project1/: pyproject.toml
step06_crew_ai/04_strategies_in_workflows/projects/crews_agents_tasks_coding/project1/src/project1/: main.py
step06_crew_ai/04_strategies_in_workflows/projects/crews_agents_tasks_coding/project1/src/project1/crews/teaching_crew/: teaching_crew.py
step06_crew_ai/04_strategies_in_workflows/projects/project_litellm/: README.md  pyproject.toml
step06_crew_ai/04_strategies_in_workflows/projects/project_litellm/src/project_litellm/: main1.py
step06_crew_ai/05_augmented_llms_RAG/: 00_knowledge.md  02_tools.md
step06_crew_ai/05_augmented_llms_RAG/projects/knowledge/: README.md  pyproject.toml
step06_crew_ai/05_augmented_llms_RAG/projects/knowledge/src/knowledge/: main.py
step06_crew_ai/05_augmented_llms_RAG/projects/tools_project/: README.md  pyproject.toml
step06_crew_ai/05_augmented_llms_RAG/projects/tools_project/src/tools_project/: main.py  main1.py  main2.py
step06_crew_ai/07_deployment_of_crewAI_project/: 00_deployment_methods.md
(+62 files in other folders)
