[project]
name = "chainlit-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Naveed", email = "naveedkhalid091@yahoo.com" }
]
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.4.400",
]

[project.scripts]
chainlit-ui = "chainlit_ui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
