[project]
name = "project3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Naveed", email = "naveedkhalid091@yahoo.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.0.11",
]

[project.scripts]
project3 = "project3:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
