[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Naveed", email = "naveedkhalid091@yahoo.com" }
]
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.61.3",
]

[project.scripts]
project1 = "project1:main"
gemini1="project1.hello:call_gemini"
founder="project1.hello:call_gemini2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
