[project]
name = "prompt-chaining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Naveed", email = "naveedkhalid091@yahoo.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.102.0",
]

[project.scripts]
prompt-chaining = "prompt_chaining:main"
start="prompt_chaining.main:function1"
first_chain="prompt_chaining.main:chain"
second_chain="prompt_chaining.main:city_name"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
