[project]
name = "knowledge"
version = "0.1.0"
description = "knowledge using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "google-generativeai>=0.8.4",
]

[project.scripts]
kickoff = "knowledge.main:kickoff"
plot = "knowledge.main:plot"
kn="knowledge.main1:my_knowledge"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
