[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Naveed", email = "naveedkhalid091@yahoo.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.102.0",
    "crewai-tools>=0.36.0",
]

[project.scripts]
project1 = "project1:main"
panaflow = "project1.main:start_flow" 

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
